assets/css/style.css
html, body { 
    margin: 0; 
    padding: 0; 
    width: 100%; 
    height: 100%;
}

*{
  /* -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; */
}

:focus {
    outline: -webkit-focus-ring-color auto 5px;
    outline-color: #E7C45D;
}

input[type="range" i]:focus{
  outline:none;
}

main{
	width:100%;
	height:100%;
  /* overflow: hidden; */
  display: flex;
  align-items: center;
  justify-content: center;
}

main > div {
  height: 100%;
}

button{
  background-color: #666;
  color: #FFF;
}

button:hover{
  background-color: #CCC;
  border:0;
  cursor:pointer;
}

li{
  list-style: none;
  padding: 5px;
  font-size: 1rem;
  font-weight: 400;
  text-transform: uppercase;
}


.logo {
  display: block;
  position: absolute;
  top: 5%;
  left: 5%;
  /*-webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);*/
  margin: 0;
  max-height: 100px;
  min-height: 42px;
  width: 120px;
  text-align: center;
  z-index: -1;
}

.quiz-container, .results-container{
  width:65%;
  max-width:850px;
  max-height:500px;
  padding-bottom:50px;
}

.results-container{
  max-height:none;
}

.header{
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  width: 100%;
  background-color: #666;
  color: rgba(255,255,255,.75);
  text-align: center;
  font-size: 1.5rem;
  padding: .75rem 0;
  font-weight: 300;
  margin-bottom:0;
}

.slide, .results{
  height:100%;
  border-radius:5px;
}

.results{
  height:auto;
  box-shadow: 0 0 25px rgba(0,0,0,.25);
}

.top{
  width:100%;
  height:78%;
  background-color:#FFF;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column!important;
}

.results .top{
  height:auto;
}

.question{
  width:65%;
  font-size:1.55rem;
  text-align:center;
}

.description{
  width:65%;
  text-align: center;
  line-height: 1;
  margin-bottom:0;
}

.btn-group{
  width:100%;
}

.btn-group .btn{
  width:50%;
  border-top-left-radius: 0!important;
  border-top-right-radius: 0!important;
}

#next-btn{
  border-left: 2px solid #FFF;
}

#prev-btn{
  border-right: 2px solid #FFF;
}

/* ===========  RESULTS CARD ===================*/

.card-title{
  color: #666;
  font-weight: 700;
}

.card-subtitle{
  font-weight: 700;
}

.close-btn{
  position: absolute;
  top: 0;
  right: 5px;
  font-size: 2rem;
}

.close-btn a{
  color: #bbb;
  padding: 7px 5px 0px 5px;
}

.close-btn a:hover{
  background-color: #17a2b8;
  color: #FFF;
}

.fa-window-close{
  padding-right: 5px;
}



/* ===========  SLIDER ===================*/

.slider-container{
  display:flex;
  justify-content: center;
  width:50%;
}

.slider-num{
  font-size: 1.5rem;
  line-height: 1;
  font-weight: 400;
  padding: 0.65rem .5rem 0 .5rem!important;
}

.slider-desc{
  text-transform: uppercase;
  font-size: 55%;
  font-weight: 700;
  letter-spacing: .75px;
  line-height: 0;
  width: 65%;
  margin-top: -5px;
}

.slider-output, #slideVal{
  text-transform: uppercase;
  letter-spacing: .75px;
  font-size: 1rem;
  font-weight:400;
  color: #333;
  margin: 0!important;
}

#slideVal{
  font-size: 1.65rem;
}


@media screen and (min-width: 993px) {


}


@media screen and (max-width: 992px) and (min-width: 769px) {

  .quiz-container, .question, .description, .slider-desc{
    width:75%;
  }

  .slider-container{
    width:60%;
  }

}

@media screen and (max-width: 768px) {

  .quiz-container, .results-container{
    width:100%;
  }

  .question, .description, .slider-desc{
    width:85%;
  }

   .slider-container{
    width:70%;
  }

  .quiz-slider::-webkit-slider-thumb {
    width: 25px; /* Set a specific slider handle width */
    height: 25px;
  }

  .quiz-slider::-moz-range-thumb {
    width: 25px; /* Set a specific slider handle width */
    height: 25px;
  }

}

